# monad-recorder

./: .travis.yml  Changelog.md  LICENSE  README.md  appveyor.yml  monad-recorder.cabal  monad-replay.cabal  stack.yaml
src/Control/Monad/Trans/: AutoLogged.hs  AutoRecorder.hs  Recorder.hs  Replay.hs
test/: Main.hs
