name:                monad-recorder
version:             0.1.0
synopsis:            Record and replay the results of monadic actions
description:         A monad transformer and class that allows recording
                     the results of monadic actions and replay them later.
                     Inspired by the logging implementation in the transient
                     package by Alberto G. Corona. Related packages:
                     .
                     * https://hackage.haskell.org/package/transient
                     * https://hackage.haskell.org/package/Workflow
homepage:            http://github.com/harendra-kumar/monad-recorder
bug-reports:         https://github.com/harendra-kumar/monad-recorder/issues
license:             MIT
license-file:        LICENSE
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2017 Harendra Kumar
category:            General
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    Changelog.md
    README.md
    stack.yaml

library
    hs-source-dirs:   src
    exposed-modules:    Control.Monad.Trans.Recorder
                      , Control.Monad.Trans.AutoRecorder

    default-language: Haskell2010
    ghc-options:      -Wall -fwarn-identities -fwarn-incomplete-record-updates
                      -fwarn-incomplete-uni-patterns -fwarn-tabs

    build-depends:     base          >= 4.8.1  &&  < 5
                     , exceptions
                     , monad-control
                     , mtl
                     , transformers  >= 0.4.2
                     , transformers-base

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O0 -Wall -fwarn-identities -fwarn-incomplete-record-updates
               -fwarn-incomplete-uni-patterns -fwarn-tabs
  build-depends:
      base       >= 4.7 && < 5
    , hspec      >= 2.0 && < 3
    , monad-recorder
  default-language: Haskell2010

source-repository head
    type: git
    location: https://github.com/harendra-kumar/monad-recorder
